Added Atom and other bug fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <div id="particles-js"></div>
     <header>
         <div class="navbar-fixed">
             <nav>
@@ -37,6 +36,7 @@
     </header>
     <main>
         <div class="black">
+            <div id="particles-js"></div>
             <div class="globe">
                 <div class="world">
                     <div class="land"></div>
@@ -66,29 +66,29 @@
 
                     <!--   Icon Section   -->
                     <div class="row">
-                        <div class="col s12 m4">
+                        <div class="col s12 m4 center white-text">
                             <div class="icon-block">
-                                <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                                <h5 class="center">Speeds up development</h5>
+                                <h2><i class="material-icons">flash_on</i></h2>
+                                <h5>Speeds up development</h5>
 
                                 <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
                             </div>
                         </div>
 
-                        <div class="col s12 m4">
+                        <div class="col s12 m4 center white-text">
                             <div class="icon-block">
-                                <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                                <h5 class="center">User Experience Focused</h5>
+                                <h2><i class="material-icons">group</i></h2>
+                                <h5>User Experience Focused</h5>
 
                                 <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system
                                     across all platforms allow for a more unified user experience.</p>
                             </div>
                         </div>
 
-                        <div class="col s12 m4">
+                        <div class="col s12 m4 center white-text">
                             <div class="icon-block">
-                                <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                                <h5 class="center">Easy to work with</h5>
+                                <h2><i class="material-icons">settings</i></h2>
+                                <h5>Easy to work with</h5>
 
                                 <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
                             </div>
@@ -99,7 +99,7 @@
         </div>
 
 
-        <div class="parallax-container valign-wrapper">
+        <!-- <div class="parallax-container valign-wrapper">
             <div class="section no-pad-bot">
                 <div class="container">
                     <div class="row center">
@@ -108,13 +108,13 @@
                 </div>
             </div>
             <div class="parallax"><img src="images/background2.jpg" alt="Unsplashed background img 2"></div>
-        </div>
+        </div> -->
         <div class="gradient-1">
             <div class="container">
-                <div class="row">
+                <div class="row card-panel">
                     <div class="col s12 center">
-                        <h3><i class="mdi-content-send brown-text"></i></h3>
-                        <h4>Contact Us</h4>
+                        <h3><i class="mdi-content-send black-text"></i></h3>
+                        <h4>Gibt es Alternativen?</h4>
                         <p class="left-align light">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices
                             eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida
@@ -122,19 +122,45 @@
                         </p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col s12 card-panel" style="z-index:10;">
+                <div class="row card-panel" style="z-index:10;">
+                    <div class="col s12">
                         <ul class="tabs">
-                            <li class="tab col s3"><a href="#test1">Test 1</a></li>
-                            <li class="tab col s3"><a href="#test2">Test 2</a></li>
-                            <li class="tab col s3"><a href="#test3">Test 3</a></li>
-                            <li class="tab col s3"><a href="#test4">Test 4</a></li>
+                            <li class="tab col s4"><a href="#essay1">Essay 1</a></li>
+                            <li class="tab col s4"><a href="#essay2">Essay 2</a></li>
+                            <li class="tab col s4"><a href="#essay3">Essay 3</a></li>
                         </ul>
                     </div>
-                    <div id="test1" class="col s12">Test 1</div>
-                    <div id="test2" class="col s12">Test 2</div>
-                    <div id="test3" class="col s12">Test 3</div>
-                    <div id="test4" class="col s12">Test 4</div>
+                    <div id="essay1" class="col s12">Essay 1</div>
+                    <div id="essay2" class="col s12">Essay 2</div>
+                    <div id="essay3" class="col s12">Essay 3</div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card-panel">
+                            <div class="svg-container">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 400" enable-background="new 0 0 400 400" xml:space="preserve">
+              <circle fill="#FACC39" cx="200" cy="200" r="139"/>
+              <path class="atom-1" fill="none" stroke="#FFFFFF" stroke-width="8" stroke-miterlimit="10" d="M231.7,200c0,17.4-1.7,88-31.7,88
+                s-31.7-70.6-31.7-88s1.7-88,31.7-88S231.7,182.6,231.7,200z"/>
+                <circle class="circle-1" fill="#F04F4D" cx="0" cy="0" r="7.3"/>
+              <path class="atom-2" fill="none" stroke="#FFFFFF" stroke-width="8" stroke-miterlimit="10" d="M216.1,227.7c-15,8.9-76.6,43.4-91.9,17.6
+                s44.6-63.2,59.6-72.1s76.6-43.4,91.9-17.6S231.1,218.8,216.1,227.7z"/>
+                <circle class="circle-2" fill="#F04F4D" cx="0" cy="0" r="7.3"/>
+              <path class="atom-3" fill="none" stroke="#FFFFFF" stroke-width="8" stroke-miterlimit="10" d="M183.9,227.7c15,8.9,76.6,43.4,91.9,17.6
+                s-44.6-63.2-59.6-72.1s-76.6-43.4-91.9-17.6S168.9,218.8,183.9,227.7z"/>
+              <circle class="circle-3" fill="#F04F4D" cx="0" cy="0" r="7.3"/>
+              <circle fill="#1A4C59" cx="200" cy="202.5" r="16"/>
+              </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class="card-panel">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -178,11 +204,13 @@
     </main>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="/js/custom.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="http://www.hackercup.co/js/particles.js"></script>
     <script type="text/javascript" src="http://www.hackercup.co/js/laurenz.js"></script>
-    <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/6859/tween.min_1.js"></script>
+    <script type="text/javascript" src="/js/init.js"></script>
+    <script type="text/javascript" src="/js/globe.js"></script>
+    <script type="text/javascript" src="/js/atom.js"></script>
 
 </body>
 
