--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
     </main>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="http://www.hackercup.co/js/particles.js"></script>
     <script type="text/javascript" src="http://www.hackercup.co/js/laurenz.js"></script>
     <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/6859/tween.min_1.js"></script>
-    <script type="text/javascript" src="/js/init.js"></script>
-    <script type="text/javascript" src="/js/globe.js"></script>
-    <script type="text/javascript" src="/js/atom.js"></script>
+    <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript" src="js/globe.js"></script>
+    <script type="text/javascript" src="js/atom.js"></script>
 
 </body>
 
