--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                     <a href="#!" class="brand-logo">Logo</a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="sass.html">Sass</a></li>
-                        <li><a href="badges.html">Components</a></li>
-                        <li><a href="collapsible.html">Javascript</a></li>
-                        <li><a href="mobile.html">Mobile</a></li>
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">Alternativen</a></li>
+                        <li><a href="#!">Essays</a></li>
+                        <li><a href="#!">Vergleich</a></li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
-                        <li><a href="sass.html">Sass</a></li>
-                        <li><a href="badges.html">Components</a></li>
-                        <li><a href="collapsible.html">Javascript</a></li>
-                        <li><a href="mobile.html">Mobile</a></li>
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">Alternativen</a></li>
+                        <li><a href="#!">Essays</a></li>
+                        <li><a href="#!">Vergleich</a></li>
                     </ul>
                 </div>
             </nav>
