Added cool videos

--- a/index.html
+++ b/index.html
@@ -223,8 +223,26 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row card-panel">
+                    <h3 class="center">Bewegte bilder sind toll</h3>
+                    <div class="col s12 m6">
+                        <div class=" card-panel">
+                            <div class="video-container">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class=" card-panel">
+                            <div class="video-container">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
         <!-- <div class="ship-container">
             <div class="ocean"></div>
             <div class="ocean-overlay"></div>
