Removed card panel from video container

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row card-panel">
-                    <h3 class="center">Bewegte bilder sind toll</h3>
+                <div class="row ">
+                    <h3 class="center white-text">Bewegte bilder sind toll</h3>
                     <div class="col s12 m6">
                         <div class=" card-panel">
                             <div class="video-container">
