Videos neu angeordnet

--- a/index.html
+++ b/index.html
@@ -223,21 +223,31 @@
             </div>
             <div class="container">
                 <div class="row ">
-                    <h3 class="center white-text">Bewegte bilder sind toll</h3>
                     <div class="col s12 m6">
-                        <div class=" card-panel">
-                            <div class="video-container">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                      <div class=" card-panel">
+                        <h5 class="center">Bewegte bilder sind toll</h5>
+                        Schau dir jetzt den Film "Plasc Planet" an oder einen unserer Filme :)
+                      </div>
+
+                    </div>
+                    <div class="col s12 m6">
+                    <div class="row">
+                        <div class="col s12">
+                            <div class=" card-panel">
+                                <div class="video-container">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class=" card-panel">
+                                <div class="video-container">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m6">
-                        <div class=" card-panel">
-                            <div class="video-container">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
+                </div>
                 </div>
             </div>
         </div>
