--- a/index.html
+++ b/index.html
@@ -224,30 +224,110 @@
             <div class="container">
                 <div class="row ">
                     <div class="col s12 m6">
-                      <div class=" card-panel">
-                        <h5 class="center">Bewegte bilder sind toll</h5>
-                        Schau dir jetzt den Film "Plasc Planet" an oder einen unserer Filme :)
-                      </div>
+                        <div class=" card-panel">
+                            <h5 class="center">Bewegte bilder sind toll</h5> Schau dir jetzt den Film "Plasc Planet" an oder einen unserer Filme :)
+                        </div>
 
                     </div>
                     <div class="col s12 m6">
-                    <div class="row">
-                        <div class="col s12">
-                            <div class=" card-panel">
-                                <div class="video-container">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                        <div class="row">
+                            <div class="col s12">
+                                <div class=" card-panel">
+                                    <div class="video-container">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col s12">
-                            <div class=" card-panel">
-                                <div class="video-container">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                            <div class="col s12">
+                                <div class=" card-panel">
+                                    <div class="video-container">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PCwL3-hkKrg" frameborder="0" allowfullscreen></iframe>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="card-panel">
+                        <h3 class="center">Auswertung</h3>
+                        <table>
+                            <tr>
+                                <th></th>
+                                <th class="tooltipped" data-position="top" data-delay="50" data-tooltip="aus Polyethylen">Plastiktüte</th>
+                                <th>Papiertüte</th>
+                                <th>Biologisch abbaubare Plastiktüten</th>
+                                <th>Jutebeutel</th>
+                                <th>Mehrweg-Tragetasche</th>
+                                <th>Recycling tüte</th>
+                            </tr>
+                            <tr>
+                                <th>Gewicht</th>
+                                <td>30 Gramm</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <th>Abbauzeitraum</th>
+                                <td>zwischen 100 bis 500 Jahre</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <th>Produktionskosten</th>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <th>Preis</th>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <th>Benutzungsdauer</th>
+                                <td>25 min</td>
+                                <td>25 min</td>
+                                <td>25 min</td>
+                                <td>25 min</td>
+                                <td>25 min</td>
+                                <td>25 min</td>
+                            </tr>
+                            <tr>
+                                <th>Energieaufwand</th>
+                                <td>CO2-EMISSIONEN: ca 30,97 Millionen Tonnen</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <th>Verwendetes material</th>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
