--- a/index.html
+++ b/index.html
@@ -231,16 +231,17 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="card-panel">
+                <div class="card-panel">
+                    <div class="row">
                         <h3 class="center">Auswertung</h3>
                         <div class="hide-on-med-and-up center">
                             <img src="images/idk.png" class="repsonsive-img" alt="" />
                             <p class="flow-text">Leider sind Tabelle auf Mobilgeräten schwer darzustellen :/</p>
                             <p class="flow-text">Schnapp dir am besten einen Laptop oder ein Tablet um einen Blick auf die Tabelle zu werfen ;)</p>
-                            <button type="button" class="trotzdem waves-effect waves-light btn" name="button">Show me anyway</button>
+                            <button type="button" class="trotzdem waves-effect waves-light btn" name="button">Nerv mich nicht! Zeigs mir</button>
                         </div>
-
+                    </div>
+                    <div class="row">
                         <table id="table" class="hide-on-small-and-down bordered responsive-table ">
                             <tr>
                                 <th></th>
