--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Plastik Projekt</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 </head>
 
 <body>
