--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body id="home">
     <header>
         <div class="navbar-fixed">
             <nav>
@@ -19,16 +19,16 @@
                     <a href="#!" class="brand-logo">Logo</a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Alternativen</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#alternatives">Alternativen</a></li>
                         <li><a href="#essays">Essays</a></li>
-                        <li><a href="#!">Vergleich</a></li>
+                        <li><a href="#vergleich">Vergleich</a></li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Alternativen</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#alternatives">Alternativen</a></li>
                         <li><a href="#essays">Essays</a></li>
-                        <li><a href="#!">Vergleich</a></li>
+                        <li><a href="#vergleich">Vergleich</a></li>
                     </ul>
                 </div>
             </nav>
@@ -64,7 +64,6 @@
             <h2 class="center white-text">Umwelt und so</h2>
             <h4 class="center white-text">Life in Plastic, it's Fantastic?</h4>
             <div class="container">
-
                 <!--   Icon Section   -->
                 <div class="row">
                     <div class="col s12 m6 center">
@@ -76,6 +75,10 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Aneinander gelegt würden die Jährlich alleine in Deutschland verbrauchten Plastiktüten 39 die umwicklen.
+                    1 Billion ist eine menge die man sich kaum vorstellen kann. Aber der Weltweite Plastiktüten verbrauch liegt bei 1 Billion Stück.
+                    90 Prozent der verbrauchten Plastiktüten landen auf Mülldeponien
+                     -->
                     <div class="col s12 m6 center">
                         <div class="card-panel">
                             <div class="icon-block">
@@ -103,6 +106,7 @@
                     </div>
                 </div>
                 <div class="row card-panel" style="z-index:10;" id="essays">
+                    <h3 class="center">Unsere Essays</h3>
                     <div class="col s12">
                         <ul class="tabs">
                             <li class="tab col s4"><a href="#essay1">Essay 1</a></li>
@@ -333,6 +337,8 @@
         <div class="modal-content">
             <h4>Impressum</h4>
             <p>A bunch of text</p>
+            <a href="https://www.vecteezy.com/vector-art/73824-shopping-paper-bag">Vector Design by www.vecteezy.com</a>
+            <a href="https://giphy.com/gifs/3o7TKJr0rcnn2TswAU">via GIPHY</a></p>
         </div>
         <div class="modal-footer">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Wow</a>
